if applied, resolves case header spacing

--- a/src/scss/components/_case_details_header.scss
+++ b/src/scss/components/_case_details_header.scss
@@ -1,14 +1,7 @@
 // Case details header
 .mcc-case-details-header {
-  margin-top: 20px;
-  padding-right: 0px;
-  padding-left: 0px;
-}
-
-.mcc-case-details {
   margin-top: 30px;
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-top: 1px;
 }
 
 .moj-button-menu__wrapper {
@@ -28,3 +21,5 @@
   padding-top: 6px;
   padding-bottom: 8px;
 }
+
+
